--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <body>
 
     <h1>MINISO BLIND BOX</h1>
-    <p>Chạm vào 1 hộp duy nhất để nhận quà!</p>
+    <p>Anh xin lỗi vợ! Anh yêu vợ nhiều lắm ❤️</p>
 
     <div class="box-grid" id="mainGrid">
         <div class="box" onclick="openBox(this)">?</div>
