Update message in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <body>
 
     <h1>MINISO BLIND BOX</h1>
-    <p>Anh xin lỗi vợ! Anh yêu vợ nhiều lắm ❤️</p>
+    <p>Anh xin lỗi vợ! Anh yêu vợ nhiều lắm!</p>
 
     <div class="box-grid" id="mainGrid">
         <div class="box" onclick="openBox(this)">?</div>
@@ -145,7 +145,7 @@
             <div id="rarityBadge" class="rarity-badge">COMMON</div>
             <img id="prizeImg" src="" alt="Gift">
             <h2 id="prizeName">Tên Quà Tặng</h2>
-            <button class="btn-close" onclick="closeAndReset()">Nhận Quà & Chơi Tiếp</button>
+            <button class="btn-close" onclick="closeAndReset()">Nhận Quà Và Chơi Tiếp</button>
         </div>
     </div>
 
