--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <body>
 
     <h1>MINISO BLIND BOX</h1>
-    <p>Anh xin lỗi vợ! Anh yêu vợ nhiều lắm!</p>
+    <p>Anh xin lỗi vợ! Anh yêu vợ nhiều lắm ❤️</p>
 
     <div class="box-grid" id="mainGrid">
         <div class="box" onclick="openBox(this)">?</div>
@@ -157,12 +157,12 @@
                 rarity: "Common", color: "#94a3b8", chance: 40 
             },
             { 
-                name: "Kuromi Punk", 
+                name: "Kuromi Nổi Giận", 
                 image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTy95K-Y4N5wB_x4N4N_4W-w3A5Y4-w3A5Y4A&s", 
                 rarity: "Common", color: "#a855f7", chance: 35 
             },
             { 
-                name: "Gấu Lotso", 
+                name: "Lotso Chubby", 
                 image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7v1_N_7-N_4W-w3A5Y4-w3A5Y4A5Y4-w3A&s", 
                 rarity: "Rare", color: "#ec4899", chance: 20 
             },
