--- a/index.html
+++ b/index.html
@@ -153,22 +153,22 @@
         const items = [
             { 
                 name: "Loopy Ngái Ngủ", 
-                image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_xNq8rE_jFfW8V2I3I6D-vX7-i2o-n_Jq2A&s", 
+                image: "loopy.jpg", 
                 rarity: "Common", color: "#94a3b8", chance: 40 
             },
             { 
                 name: "Kuromi Nổi Giận", 
-                image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTy95K-Y4N5wB_x4N4N_4W-w3A5Y4-w3A5Y4A&s", 
+                image: "kuromi.jpg", 
                 rarity: "Common", color: "#a855f7", chance: 35 
             },
             { 
                 name: "Lotso Chubby", 
-                image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7v1_N_7-N_4W-w3A5Y4-w3A5Y4A5Y4-w3A&s", 
+                image: "lotso.jpg", 
                 rarity: "Rare", color: "#ec4899", chance: 20 
             },
             { 
                 name: "Mickey Gold (SECRET)", 
-                image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_xNq8rE_jFfW8V2I3I6D-vX7-i2o-n_Jq2A&s", 
+                image: "mickey.jpg", 
                 rarity: "Secret", color: "#fbbf24", chance: 5 
             }
         ];
